# agentbox

./: .gitignore  LICENSE  Makefile  README.md  buf.gen.yaml  pyproject.toml
agentbox/: __init__.py  egress_proxy.py  grpc_server.py  models.py  sandbox_manager.py
proto/sandbox/v1/: sandbox.proto
sandbox/: Dockerfile  process_api.py
scripts/: benchmark.py  grpc_client_example.py  setup-gvisor.sh
tests/: __init__.py  test_integration.py
ts-client/: package-lock.json  package.json
ts-client/scripts/: grpc_client_example.ts
ts-client/src/: index.ts
